完整的实现了作品和用户的图片上传回显功能，在MyMvcConfig中配置了虚拟路径

--- a/share-community/src/main/resources/templates/commons/bar.html
+++ b/share-community/src/main/resources/templates/commons/bar.html
@@ -47,7 +47,7 @@
                     <a th:href="@{/user/exit}" class="dropdown-item">退出</a>
                 </div>
             </div>
-            <a th:if="${#strings.isEmpty(session.username)}" id="modal-111021" href="#modal-container-111021" role="button" class="btn" data-toggle="modal">登录</a>
+            <a th:if="${#strings.isEmpty(session.username)}" id="modal-111021" href="#modal-container" role="button" class="btn" data-toggle="modal">登录</a>
         </div>
     </div>
 </nav>
