--- a/share-community/src/main/resources/templates/index.html
+++ b/share-community/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
             <li class="shadow-sm"><a th:href="@{/(pageNum=${coms.getTotalPages()})}">尾页</a></li>
         </ul>
     </div>
-    <div class="modal fade" id="modal-container-111021" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modal-container" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
