--- a/share-community/src/main/resources/templates/user/register.html
+++ b/share-community/src/main/resources/templates/user/register.html
@@ -46,4 +46,24 @@
 </div>
 
 </body>
+<script>
+    function user_ajax() {
+        $.post({
+            url:"/user/check",
+            data:{"username":$("#username").val(),"password":$("#password").val()},
+            success: function (data) {
+                if (data.toString()=='ok'){
+                    $("#msg-p").css('display','none');
+                    alert("登录成功");
+                    setTimeout(location.reload(),1000);
+                }
+                else {
+                    console.log(data);
+                    $("#msg-p").html(data);
+                    $("#msg-p").css('display','block');
+                }
+            }
+        })
+    }
+</script>
 </html>
