--- a/share-community/src/main/resources/templates/com-input.html
+++ b/share-community/src/main/resources/templates/com-input.html
@@ -44,10 +44,12 @@
             width   : "100%",
             height  : 640,
             syncScrolling : "single",
-            //你的lib目录的路径，我这边用JSP做测试的static.editormd.lib
+            //插件不仅依赖于editormd.js,还依赖于其下面d额lib中的js文件
             path    : [[@{/editormd/lib/}]],
-        //这个配置在simple.html中并没有，但是为了能够提交表单，使用这个配置可以让构造出来的HTML代码直接在第二个隐藏的textarea域中，方便post提交表单。
-        saveHTMLToTextarea : false
+            imageUpload    : true,
+            imageFormats   : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+            imageUploadURL : "/com/imageUpload/",
+            saveHTMLToTextarea : false
     });
     });
 </script>
