--- a/share-community/src/main/resources/templates/commons/bar.html
+++ b/share-community/src/main/resources/templates/commons/bar.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">首页</a>
+                    <a href="/" class="nav-link active">首页</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">热门</a>
