--- a/share-community/src/main/resources/templates/index.html
+++ b/share-community/src/main/resources/templates/index.html
@@ -6,9 +6,11 @@
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.4.1-1/css/bootstrap.css}">
     <link rel="stylesheet" href="/custom/page-list.css">
+    <link rel="stylesheet" href="/custom/index.css">
     <script th:src="@{/webjars/jquery/3.4.0/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/1.14.3/popper.js}"></script>
     <script th:src="@{/webjars/bootstrap/4.4.1-1/js/bootstrap.js}"></script>
+    <script src="/custom/page-list.js"></script>
 </head>
 <body style="padding-top: 57px" background="/img/bg.png">
 <nav th:replace="~{commons/bar ::#navbar }"></nav>
@@ -16,14 +18,14 @@
     <div class="card mt-3 shadow-sm" th:each="com : ${coms}">
         <div class="card-body">
             <h5 th:text="${com.title}">标题</h5>
-            <div class="row">
-                <div class="col-md-8">
+            <div class="row com-row">
+                <div th:class="${#strings.isEmpty(com.firstPicture)?'col-md-12':'col-md-8'}">
                     <p class="card-text" th:text="${com.brief}">
                         内容内容内容内容内容内容内容内容内容内容内容内容内容内容
                     </p>
                 </div>
-                <div class="col-md-4 text-right">
-                    <img class="card-img img-fluid" th:src="@{user/head/item1.jpg}" alt="" style="width: 100px; height: 80px">
+                <div class="col-md-4 text-right" th:if="${not #strings.isEmpty(com.firstPicture)}">
+                    <img class="card-img img-fluid" th:src="${com.getFirstPicture()}" alt="" style="width: 100px; height: 80px">
                 </div>
             </div>
             <a th:href="@{/com/article/}+${com.id}" class="btn btn-outline-primary btn-sm">查看详情</a>
@@ -35,15 +37,8 @@
             <span class="small" th:text="${#dates.format(com.createdDate,'yyyy-MM-dd')}">2020/02/02</span>
         </div>
     </div>
-    <div class="text-center mt-3">
-        <ul class="list-inline">
-            <li class="shadow-sm"><a th:href="@{/(pageNum=1)}">首页</a></li>
-            <li class="shadow-sm" th:each="count : ${#numbers.sequence(1,coms.getTotalPages())}">
-                <a th:href="@{/(pageNum=${count})}" th:text="${count}"></a>
-            </li>
-            <li class="shadow-sm"><a th:href="@{/(pageNum=${coms.getTotalPages()})}">尾页</a></li>
-        </ul>
-    </div>
+    <!--引入分页按钮-->
+    <div th:replace="~{commons/page :: #page}"></div>
     <div class="modal fade" id="modal-container" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -90,7 +85,7 @@
     </div>
 </div>
 </body>
-<script type="text/javascript" th:inline="javascript">
+<script th:inline="javascript" type="text/javascript" >
     function user_ajax() {
             $.post({
                 url:"/user/check",
@@ -108,6 +103,11 @@
                     }
                 }
             })
+    }
+    window.onload = function () {
+         var span=3;             //一次所能显示的最大页数
+         var pages = [[${coms}]];
+        showPageList(span,pages.totalPages,pages.pageable.pageNumber);
     }
 </script>
 </html>
